welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: ')' expected but ';' found.
      if (estSurBiscuit() {nbBiscuit = nbBiscuit +1};} 
                                                    ^